# lms

./: .editorconfig  .eslintrc  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .pre-commit-config.yml  .railwayignore  .releaserc  AI_ASSISTANT_EXTRACTION_ROADMAP.md  CONTRIBBUTION.md  Contribution.md  Dockerfile.railway  Dockerfile.simple  MANIFEST.in  PR-DESCRIPTION.md  Procfile  RAILWAY_DEPLOY.md  README.md  bench-installation.md  codecov.yml  commitlint.config.js  crowdin.yml  cypress.config.js  docker-compose.railway.yml  docker-compose.yml  docker-installation.md  dump.rdb  easy-install.py  license.txt  package.json  pyproject.toml  railway-start-simple.sh  railway-start.sh  railway.json  railway.yml  requirements.txt  run.md  setup.py
apps/lms/: .editorconfig  .releaserc  README.md  SECURITY.md  docker-installation.md  pyproject.toml  setup.py
apps/lms/frontend/: index.html  package.json
apps/lms/frontend/src/: main.js  translation.js
apps/lms/lms/: page_renderers.py  plugins.py  routing.py  test_widgets.py  unsplash.py  widgets.py
apps/lms/lms/lms/: md.py  payments.py  telemetry.py  test_utils.py
apps/lms/lms/locale/: es.po  ru.po
apps/lms/lms/patches/: change_name_for_community_members.py  create_mentor_request_email_templates.py  replace_member_with_user_in_batch_membership.py  replace_member_with_user_in_lms_message.py  replace_member_with_user_in_mentor_request.py  set_email_preferences.py
apps/lms/lms/templates/: assignment.html  certificates_section.html  courses_created.html  signup-form.html  upcoming_evals.html
lms/: api.py  (+18 more)
(+2910 files in other folders)
