[project]
name = "lms"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
description = "Easy to use, open source, Learning Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # core dependencies
    "websocket_client~=1.6.4",
    "markdown~=3.5.1",
    "beautifulsoup4~=4.12.2",
    "lxml~=4.9.3",
    "cairocffi~=1.6.1",
    "razorpay~=1.4.1",
    "fuzzywuzzy~=0.18.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
